<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/hello"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" >

            <EditText
                android:id="@+id/search_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_7digital" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/search_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/search" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/launch_shop_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/launch_shop" />

            <Button
                android:id="@+id/launch_music_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/launch_music" />

            <Button
                android:id="@+id/launch_downloads_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/launch_downloads" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/release_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/release" />

            <Button
                android:id="@+id/artist_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/artist" />

            <Button
                android:id="@+id/track_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/track" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/play_track_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_track" />

            <Button
                android:id="@+id/play_release_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_release" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affiliate_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/affiliate_id_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7digital_release_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/release_id_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7digital_track_id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/track_id_edittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:inputType="number" />
        </LinearLayout>

        <View
            style="@style/Widget.Divider"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="5dip"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7digital_artist_id_n_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/artist_id_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/id"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/artist_name_edittext"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>